--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
 
 		<header>
 
-			<a class="logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
+			<nav class="nav">
 
-			<nav>
+				<a class="nav-logo" href="index.html">Rachel Longoria</a>
 
 				<ul>
 
