--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<header>
 
-			<nav class="navigation">
+			<nav class="nav">
 
 				<a class="nav-logo" href="index.html">Rachel Longoria</a>
 
