--- a/freshpro.html
+++ b/freshpro.html
@@ -17,13 +17,20 @@
 
 	<body>
 
-		<header class="portfolio-header">
+		<header>
 
-			<a class="logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
+			<nav class="nav">
 
-			<nav>
+				<a class="nav-logo" href="index.html">Rachel Longoria</a>
 
-				<a href="portfolio.html">Back to portfolio</a>
+				<ul>
+
+					<li><a href="index.html">Home</a></li>
+					<li><a class="current-link" href="portfolio.html">Portfolio</a></li>
+					<li><a href="resume.html">Resume</a></li>
+					<li><a href="contact.html">Contact</a></li>
+
+				</ul>
 
 			</nav>
 
@@ -177,9 +184,9 @@
 
 			<div class="portfolio-artifact2">
 
-				<p>View my interactive prototype <a href="https://projects.invisionapp.com/share/TAUBRVD54HV%EF%BB%BF">Here</a>.</p>
+				<p>View my interactive prototype <a href="https://projects.invisionapp.com/share/TAUBRVD54HV%EF%BB%BF">Here</a>.
 
-				<p><br>Made with InVision.</p>
+				<br>Made with InVision.</p>
 
 				<img src="images/freshpro/prototype.gif" alt="FreshPro - In Motion">
 
