--- a/spotify.html
+++ b/spotify.html
@@ -17,13 +17,20 @@
 
 	<body>
 
-		<header class="portfolio-header">
+		<header>
 
-			<a class="logo" href="index.html"><img src="images/logo.png" alt="logo"></a>
+			<nav class="nav">
 
-			<nav>
+				<a class="nav-logo" href="index.html">Rachel Longoria</a>
 
-				<a href="portfolio.html">Back to portfolio</a>
+				<ul>
+
+					<li><a href="index.html">Home</a></li>
+					<li><a class="current-link" href="portfolio.html">Portfolio</a></li>
+					<li><a href="resume.html">Resume</a></li>
+					<li><a href="contact.html">Contact</a></li>
+
+				</ul>
 
 			</nav>
 
