--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 				<p>I'm a dreamer, creator, & designer. After working in the service industry for 10 years, I decided to pack up my skills of empathy and understanding and explore the world of design.</p>
 
-				<p>I'm passionate about environmentalism, learning, and empowering people to be the best version of themselves. I love walking down the street and seeing the influence of design in small, everyday interactions. I daydream about working on projects that make those interactions as user-centric and emotionally-driven as possible. I strongly believe the best way to take big, world changing steps is to start with small, impactful ideas.</p>
+				<p>I'm passionate about environmentalism, learning, and empowering people to be the best version of themselves. I love walking down the street and seeing the influence of design in small, everyday interactions. I daydream about working on projects that make those interactions as user-centric and emotionally-driven as possible. I truly believe the best way to take big, world changing steps is to start with small, impactful ideas.</p>
 
 				<p>I have an unusually strong love for coffee, music, and plants. In my spare time, you can find me creating a new story arc for my character in Dungeons and Dragons, hunting for a good local food spot to try (suggestions welcome), and playing fetch with my cat, Sushi.</p>
 
