--- a/resume.html
+++ b/resume.html
@@ -40,6 +40,9 @@
 
 			<div class="primary-title">
 
+				<p class="pdf"><a href="rachel-longoria-resume.pdf" target="_blank" download>Download PDF version</a></p>
+
+
 				<div class="primary-title-name">
 
 					<h1>Rachel Longoria</h1>
