--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
 				<p>I have an unusually strong love for coffee, music, and plants. In my spare time, you can find me creating a new story arc for my character in Dungeons and Dragons, hunting for a good local food spot to try (suggestions welcome), and playing fetch with my cat, Sushi.</p>
 
+				<img class="logo" src="images/logo.png" alt="Rachel Longoria">
+
 			</div>
 
 
