--- a/resume.html
+++ b/resume.html
@@ -69,6 +69,19 @@
 				<h4>Experience</h4>
 
 				<p>
+					<b>Server/Web Designer</b>, 
+					<em>Pour House Pints & Pies</em>
+				</p>
+
+				<p>
+					Dec 2018 - Current
+				</p>
+
+				<p>Worked with a coworker to redesign restaurant website and update menu. Collected feedback from coworkers and convinced managers to add POS features that improved Front of House task flows.</p>
+
+				<br>
+
+				<p>
 					<b>Technical Advisor</b>, 
 					<em>Electronic Arts</em>
 				</p>
@@ -104,112 +117,116 @@
 
 			</div>
 
-			<div class="resume-awards">
+			<div class="resume-other">
 
-				<h4>Awards</h4>
+				<div>
 
-				<p>
-					<b>Process Champion, Month of June </b>-
-					<em> Electronic Arts, 2018</em>
-				</p>
+					<h4>Education</h4>
 
-				<p>
-					<b>Top Bonus Receiver, WWCE (48 days) </b>-
-					<em> Electronic Arts, 2018</em>
-				</p>
+					<p>
+						<b>A.A.S. Visual Communication - User Experience Design</b>
+					</p>
+					<p>
+						<em>Austin Community College</em>
+					</p>
+					<p>
+						Aug 2018 - May 2020
+					</p>
 
-				<p>
-					<b>Employeee of the Year </b>-
-					<em> Chili's Grill & Bar, 2015</em>
-				</p>
+				</div>
 
-			</div>
+				<div>
 
-			<div>
+					<h4>Awards</h4>
 
-				<h4>Education</h4>
+					<p>
+						<b>Process Champion, Month of June </b>-
+						<em> Electronic Arts, 2018</em>
+					</p>
 
-				<p>
-					<b>A.A.S. Visual Communication - User Experience Design</b>
-				</p>
-				<p>
-					<em>Austin Community College</em>
-				</p>
-				<p>
-					Aug 2018 - May 2020
-				</p>
+					<p>
+						<b>Top Bonus Receiver, WWCE (48 days) </b>-
+						<em> Electronic Arts, 2018</em>
+					</p>
 
-			</div>
+					<p>
+						<b>Employeee of the Year </b>-
+						<em> Chili's Grill & Bar, 2015</em>
+					</p>
 
-			<div class="resume-skills">
+				</div>
 
-				<h4>Skills</h4>
+				<div>
 
-				<details>
+					<h4>Skills</h4>
 
-					<summary>Design</summary>
+					<details>
 
-					<div>
+						<summary>Design</summary>
 
-						<ul>
+						<div>
 
-							<li>Sketching</li>
-							<li>Personas</li>
-							<li>Storyboarding</li>
-							<li>User flows</li>
-							<li>Wireframing</li>
+							<ul>
 
-						</ul>
+								<li>Sketching</li>
+								<li>Personas</li>
+								<li>Storyboarding</li>
+								<li>User flows</li>
+								<li>Wireframing</li>
 
-					</div>
+							</ul>
 
-				</details>
+						</div>
 
-				<details>
+					</details>
 
-					<summary>Research</summary>
+					<details>
 
-					<div>
+						<summary>Research</summary>
 
-						<ul>
+						<div>
 
-							<li>Usability testing</li>
-							<li>Contextual inquiry</li>
-							<li>In-depth interviews</li>
-							<li>Qualitative analysis</li>
-							<li>Quantitative analysis</li>
+							<ul>
 
-						</ul>
+								<li>Usability testing</li>
+								<li>Contextual inquiry</li>
+								<li>In-depth interviews</li>
+								<li>Qualitative analysis</li>
+								<li>Quantitative analysis</li>
 
-					</div>
+							</ul>
 
-				</details>
+						</div>
 
-				<details>
+					</details>
 
-					<summary>Tools</summary>
+					<details>
 
-					<div>
+						<summary>Tools</summary>
 
-						<ul>
+						<div>
 
-							<li>Adobe XD</li>
-							<li>Adobe Photoshop</li>
-							<li>Adobe Illustrator</li>
-							<li>Sketch</li>
-							<li>Figma</li>
-							<li>Invision</li>
-							<li>Mural</li>
-							<li>JIRA</li>
-							<li>Evernote</li>
-							<li>Slack</li>
-							<li>Google Drive</li>
+							<ul>
 
-						</ul>
+								<li>Adobe XD</li>
+								<li>Adobe Photoshop</li>
+								<li>Adobe Illustrator</li>
+								<li>Sketch</li>
+								<li>Figma</li>
+								<li>Invision</li>
+								<li>Mural</li>
+								<li>JIRA</li>
+								<li>Evernote</li>
+								<li>Slack</li>
+								<li>Google Drive</li>
 
-					</div>
+							</ul>
 
-				</details>
+						</div>
+
+					</details>
+
+				</div>
 
 			</div>
 
