--- a/resume.html
+++ b/resume.html
@@ -95,7 +95,7 @@
 				<br>
 
 				<p>
-					<b>Leader Trainer/Bartender</b>, 
+					<b>Lead Trainer/Bartender</b>, 
 					<em>Chili's Grill & Bar</em>
 				</p>
 				<p>
