--- a/resume.html
+++ b/resume.html
@@ -182,6 +182,7 @@
 								<li>Usability testing</li>
 								<li>Contextual inquiry</li>
 								<li>In-depth interviews</li>
+								<li>Heuristic analysis</li>
 								<li>Qualitative analysis</li>
 								<li>Quantitative analysis</li>
 
