--- a/resume.html
+++ b/resume.html
@@ -141,7 +141,7 @@
 					</p>
 
 					<p>
-						<b>Employeee of the Year </b>-
+						<b>Employee of the Year </b>-
 						<em> Chili's Grill & Bar, 2015</em>
 					</p>
 
@@ -208,7 +208,8 @@
 								<li>Invision</li>
 								<li>Mural</li>
 								<li>JIRA</li>
-								<li>Evernote</li>
+								<li>Miro</li>
+								<li>Trello</li>
 								<li>Slack</li>
 								<li>Google Drive</li>
 
