--- a/resume.html
+++ b/resume.html
@@ -77,7 +77,7 @@
 					Dec 2018 - Current
 				</p>
 
-				<p>Worked with a coworker to redesign restaurant website and update menu. Collected feedback from coworkers and convinced managers to add POS features that improved Front of House task flows.</p>
+				<p>Conducted heuristic analysis on company's current website and worked with a coworker to redesign website and update menu. Collected feedback from coworkers and convinced managers to add POS features that improved Front of House task flows.</p>
 
 				<br>
 
