--- a/ecobags.html
+++ b/ecobags.html
@@ -40,7 +40,7 @@
 			
 			<nav class="portfolio-second-nav">
 				
-				<a class="disabled">prev</a> / <a href="freshpro.html">next</a>
+				<a href="sdl-internship.html">prev</a> / <a href="freshpro.html">next</a>
 
 			</nav>
 
