--- a/portfolio.html
+++ b/portfolio.html
@@ -44,6 +44,18 @@
 
 					<figure>
 
+						<a class="portfolio-img" href="sdl-internship.html"><img src="images/sdl-internship/journey-map-workshop.jpg" alt="In progress - COA Service Design Lab Internship"></a>
+
+						<figcaption><a class="portfolio-img" href="sdl-internship.html"><b>(In progress)</b> COA Service Design Lab Internship - Evaluating the impact of SDL's work</a></figcaption>
+
+					</figure>
+
+				</div>
+
+				<div class="portfolio-card">
+
+					<figure>
+
 						<a class="portfolio-img" href="ecobags.html"><img src="images/ecobags/ecobag-main.png" alt="Ecobags - Using persuasive design to make environmental change"></a>
 
 						<figcaption><a class="portfolio-img" href="ecobags.html">Ecobags - Using persuasive design to make environmental change</a></figcaption>
@@ -68,7 +80,7 @@
 
 					<figure>
 
-						<a class="portfolio-img" href="spotify.html" target="_blank"><img src="images/spotify/spotify-main.png" alt="Spotify - Redesigning the login experience"></a>
+						<a class="portfolio-img" href="spotify.html"><img src="images/spotify/spotify-main.png" alt="Spotify - Redesigning the login experience"></a>
 
 						<figcaption><a class="portfolio-img" href="spotify.html">Spotify - Redesigning the login experience</a></figcaption>
 
