--- a/resume.html
+++ b/resume.html
@@ -69,6 +69,19 @@
 				<h4>Experience</h4>
 
 				<p>
+					<b>Service Design Intern</b>, 
+					<em>City Of Austin Office of Design & Delivery</em>
+				</p>
+
+				<p>
+					January 2020 - May 2020
+				</p>
+
+				<p>Conducted user research by facilitating a journey mapping workshop with the City of Austin's Service Design Lab. Conducted interviews and gathered data to create a post-project client survey that measures project implementation and impact. Created a visual flow chart and pamphlet for client office visits to help explain project timelines. </p>
+
+				<br>
+
+				<p>
 					<b>Server/Web Designer</b>, 
 					<em>Pour House Pints & Pies</em>
 				</p>
