--- a/sdl-internship.html
+++ b/sdl-internship.html
@@ -47,17 +47,117 @@
 			<div class="primary-title">
 
 				<h1>City of Austin - Service Design Lab Internship</h1>
-				<p>Evaluating the impact of SDL's work</p>
+				<p>Refining and Developing the Customer Experience for Office Visits</p>
 
 			</div>
 
-			<img src="images/sdl-internship/journey-map-workshop.jpg" alt="COA Service Design Lab Internship - Evaluating the impact of SDL's work">
+			<img src="images/sdl-internship/journey-map-workshop.jpg" alt="COA Service Design Lab Internship - Refining and Developing the Customer Experience for Office Visits">
 
 			<h3>Overview</h3>
 
-			<p>This project is still in progress. <br>
+			<p>For 16 weeks, I worked as a Service Design Intern for the City of Austin’s Office of Design and Delivery (ODD) to help refine and develop the customer experience for their office visits. It was a service design inception - using service design to improve the ODD service design department.</p>
 
-				For more information about this project or any of my work, please don't hesitate to contact me with questions.</p>
+			<h3>Audience</h3>
+
+			<p>Our target audience was people who work for the City of Austin who were:</p>
+
+			<ul>
+
+				<li>Potential clients in need of ODD’s services and;</li>
+
+				<li>Clients meeting with ODD through open office hours</li>
+
+			</ul>
+
+			<h3>Team/Role</h3>
+
+			<p>My team was made up of three people. During the first half of the project, I worked with my team on User Research. During the second half, I solely focused on Visual Design.</p>
+
+			<h3>Constraints</h3>
+
+			<p>Some constraints we had on this project were:</p>
+
+			<ul>
+
+				<li>Very limited communication with ODD clients and;</li>
+
+				<li>Moving to a completely virtual workspace midway through the project</li>
+
+			</ul>
+
+			<p>These were very difficult constraints to work with, but our team was able to adapt and I was able to learn new ways to collaborate with my team and our stakeholders.</p>
+
+			<div class="secondary-title">
+
+				<h3>Design Process</h3>
+				<h4>Defining the Problem</h4>
+
+				<p>When our team first met with our stakeholders, they made one thing clear: they wanted to understand the impact their work had on their clients. They wanted to focus on post-delivery impact: how their services were being implemented after the client walked out the door, if their services were even being implemented at all, and how their services affected their client’s work. Did things get better? Did things get worse? Are things exactly the same?</p>
+
+				<p>Our team decided the best way to tackle this problem was to create a service line blueprint of ODD’s services. The blueprint would show every avenue, every journey that was being taken by everyone involved in the process. It would give insight into how ODD handled projects from start to finish, and it would give insight into how ODD’s clients utilized their services and implemented them. It would show where things overlapped, where things didn’t, what gaps needed to be filled and how. Sounds like a dream come true, right? Our team needed two main things to create our blueprint: we needed to understand ODD’s journey, and we needed to understand their client’s journey. We decided to start with ODD because this would give us a better understanding of the work they did and how they did it.</p>
+
+				<h4>Research - The ODD Team</h4>
+
+				<p>We planned a journey mapping workshop with four people from their team. I was the main facilitator of this workshop and created a schedule that included a few different activities. We had the ODD team sit down and map out their own experience of a project step-by-step. This was a great way to see how people in different roles within their team worked, and more importantly how they worked together. </p>
+
+				<img src="images/sdl-internship/workshop-sdl-team.jpg" alt="Service Design Lab team discussing their journey maps">
+
+				<p>I planned on having some time for the team to converge and combine their journey maps into one journey, but as the workshop progressed I realized that everyone’s journey maps were vastly different. I decided for my team that it was more important for us to listen than to force time activities just because they were planned. We got a lot of valuable information from everyone’s journey maps, but we also got a lot of valuable information by just sitting quietly and taking notes on the team’s conversations as they explored each other’s journeys. I tried to squeeze in a bit of time in the end to have the team attempt combining their journey maps, but they also thought that their own journeys were too unique to combine. I’m glad that I stepped away from my strict workshop schedule and allowed time for conversation.</p>
+
+				<p>ODD’s journey maps were on very large, obnoxious poster boards with an unruly amount of sticky notes, so after the workshop I digitized them to make them easily accessible for my team later on. This would come in handy when we were creating our service line blueprint or if we needed to look back on data. We also decided the digitized versions would be a nice souvenir of everyone’s hard work that day.</p>
+
+				<img src="images/sdl-internship/digitized-journey-maps.png" alt="Digitized Journey Maps">
+
+				<h4>Research - The ODD Clients</h4>
+
+				<p>So we gained an understanding of ODD’s process and how they think. Next we needed to understand the client’s process and how they think. We decided the best way to do this was to conduct interviews with previous ODD clients to gain perspective of their interaction with ODD and the impact their services have made. This is what our stakeholders were really focused with in the beginning, so we spent a good chunk of time picking the right questions to ask during interviews. I focused most of my questions on the client’s post-project experience to figure out how projects were being implemented and the ease of implementation. I also came up with a few pre-project questions to find out how the client journey begins as well as a few questions that would help explain the relationship and communication between ODD and their clients while a project is being worked on. We made a research plan and sent it to our stakeholders, we got the seal of approval and they started reaching out to clients on our behalf.</p>
+
+				<p>Then COVID-19 happened.</p>
+
+				<p>We were able to conduct one interview. It went really well and we gained some perspective, but it was one client. If we really wanted to understand the overall client journey, we had to have more data. We waited two weeks and by this time, we were a little more than half-way through our project. Remember that dreamy service line blueprint I mentioned? If we couldn’t get more interviews and gain an understanding of the clients’ journey, we wouldn’t be able to create an all-encompassing blueprint. We reached out to our stakeholders and they confirmed that with everything going on in regards to COVID-19, most people working for the City of Austin were too swamped for interviews (which is completely understandable). As we got closer to our deadline, we decided we had to let go of our dreamy service line blueprint and find a different approach.</p>
+
+				<p>Luckily, we started the project off strong and really dived into ODD’s side of things early on. We already gathered a ton of valuable data and we could leverage that. Our team hopped on a Miro board and brainstormed on potential solutions that could create a better experience not only for ODD, but for their clients as well. We scheduled a call with the ODD team and proposed some solutions to them.</p>
+
+				<h4>Rescoping and Design Solutions</h4>
+
+				<p>The solution that stood out to them most was helping initial clients understand exactly what they do and what services they offer. This would mostly affect clients that utilize ODD’s office hours, which has an open door policy for anyone who works for the City of Austin. We suggested creating a flowchart they could show clients to help them better understand ODD’s process. We also suggested an FAQ and glossary that clients could turn to if they ever felt confused or overwhelmed. As a designer, I can admit we use a lot of jargon. Sometimes that can slip into conversations with clients and leave them with more questions than they started with. A combination of our flow chart, faq, and glossary would help ODD show clients what they do without overwhelming them, ultimately leading to more time for focusing on the project at hand.</p>
+
+				<p>This is where our team split off from working together on user research to more unique roles. I decided to focus on the visual design of the remainder of the project, which was something I was excited about because it’s an area of UX that I really enjoy but don’t get to do as often. While my other team members worked on glossary terms and flowchart architecture, I requested access to ODD’s office hours slide deck that is presented to clients. I used the information and style from their slide deck to create a style guide for our flowchart. I wanted to make sure that anything we handed off to them would not only be good enough to stand alone, but also had the ability to be added to any existing work they had.</p>
+
+				<img src="images/sdl-internship/SDL-style-guide.png" alt="Style Guide">
+
+				<p>I brainstormed with my team members on how to organize the flow chart and suggested we look back on our journey maps to simplify the steps ODD takes. I’m really glad they were digitized and we didn’t have to sift through a ton of post it notes.</p>
+
+				<p>Once my team came up with the flow chart organization, I made a visual representation of each step we lined out. I got a lot of inspiration for my graphics from the icons and art already in their slide deck. I used similar colors in icons that visually connected pieces with one another. I limited words to labels and relied on visuals to represent each step of the flow chart.</p>
+
+				<img src="images/sdl-internship/SDL-roadmap1.png" alt="Flowchart - Version 1">
+
+				<p>But, to be honest, the first flow chart I made felt very busy. There were a lot of icons and steps, and it looked overcrowded to me. The point of the flow chart was to make clients feel less confused and overwhelmed, and I felt like this wouldn’t help. The first flow chart showed the whole client journey, from the discovery of ODD to the project hand-off.</p>
+
+				<p>I decided that since this visual was helping people during office hours visits to understand future steps, I would make another flow chart that instead began the journey at the office hours visits. I didn’t alter the chart organization that was given to me, but I did create two different start points. I felt that the second flow chart eliminated redundant information and allowed me to go a little more into detail about future steps without it looking too visually overcrowded.</p>
+
+				<img src="images/sdl-internship/SDL-roadmap2.png" alt="Flowchart - Version 2">
+
+				<p>I also made an additional visual of a two-fold pamphlet so ODD had the option of making our flowchart physical. I took some of the information about their process and as well as some designs already provided in their slideshow and I combined it with some of the FAQ we created. It was a good way to simplify the bulk of information they share with clients and make it more digestible in case clients wanted to revisit the information on their own after the meeting.</p>
+
+				<img src="images/sdl-internship/SDL-pamphlet.png" alt="Pamphlet">
+
+				<p>We kept the FAQ and glossary in a google doc format, but I did format it based on my style guide which created more visual consistency across all of our deliverables.</p>
+
+				<img src="images/sdl-internship/FAQ-screenshot.png" alt="FAQ Page Screenshot">
+
+				<p>And finally, since we weren’t able to get any data from client’s about the impact ODD’s projects have, I made a recommendation that they use some of our interview questions that focus on the client’s journey post-project and create a type of follow-up survey or interview. This would create an opportunity for their team to gain a better understanding of their work and the impact it has.</p>
+
+				<h3>Retrospective</h3>
+
+				<p>At the end of the day, I’m proud of all the work we did and the resiliency our team showed throughout this project. In a perfect world, we would have been able to make the service line blueprint of our dreams. But this project taught me that our world isn’t perfect, curve balls will be thrown at us mid-project, and it’s our job as designers to realign ourselves, re-evaluate our work, and still find a way to create a valuable solution. The problem we solve may not be the original problem we were working towards, and that’s okay. It’s more important to find a problem that’s feasible and create a solution that will make a change. Also, my flowchart is blue and that makes me feel better.</p>
+
+			</div>
+
+
+
+
+
 
 			<br>
 
