--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
 
 						<a class="portfolio-img" href="sdl-internship.html"><img src="images/sdl-internship/journey-map-workshop.jpg" alt="In progress - COA Service Design Lab Internship"></a>
 
-						<figcaption><a class="portfolio-img" href="sdl-internship.html"><b>(In progress)</b> COA Service Design Lab Internship - Evaluating the impact of SDL's work</a></figcaption>
+						<figcaption><a class="portfolio-img" href="sdl-internship.html">COA Service Design Lab Internship - Refining and Developing the Customer Experience for Office Visits</a></figcaption>
 
 					</figure>
 
