--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<h1> A curious UX designer fueled by coffee and collaboration.</h1>
 
-				<img src="images/about-picture.jpg" alt="Rachel Longoria">
+				<img src="images/sdl-internship/journey-map-workshop.jpg" alt="Rachel Longoria">
 
 			</div>
 
@@ -54,7 +54,7 @@
 
 				<p>I'm passionate about environmentalism, learning, and empowering people to be the best version of themselves. I love walking down the street and seeing the influence of design in small, everyday interactions. I daydream about working on projects that make those interactions as user-centric and emotionally-driven as possible. I truly believe the best way to take big, world changing steps is to start with small, impactful ideas.</p>
 
-				<p>I have an unusually strong love for coffee, music, and plants. In my spare time, you can find me creating a new story arc for my character in Dungeons and Dragons, hunting for a good local food spot to try (suggestions welcome), and playing fetch with my cat, Sushi.</p>
+				<p>I have an unusually strong love for coffee, music, and plants. In my spare time, you can find me playing the ukulele, hunting for a good local food spot to try (suggestions welcome), and playing video games.</p>
 
 				<img class="logo" src="images/logo.png" alt="Rachel Longoria">
 
