--- a/freshpro.html
+++ b/freshpro.html
@@ -184,7 +184,7 @@
 
 			<div class="portfolio-artifact2">
 
-				<p>View my interactive prototype <a href="https://projects.invisionapp.com/share/TAUBRVD54HV%EF%BB%BF">Here</a>.
+				<p>View my interactive prototype <a href="https://projects.invisionapp.com/share/TAUBRVD54HV#/screens"><u>Here</u></a>.
 
 				<br>Made with InVision.</p>
 
