--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,20 @@
 
 					<figure>
 
-						<a class="portfolio-img" href="sdl-internship.html"><img src="images/sdl-internship/journey-map-workshop.jpg" alt="In progress - COA Service Design Lab Internship"></a>
+						<a class="portfolio-img" href="tdwb-internship.html">
+						<img src="images/twdb-internship/affinity-mapping.png" alt="Creating a Statewide Texas Water Data Hub"></a>
+
+						<figcaption><a class="portfolio-img" href="twdb-internship.html">Creating a Statewide Texas Water Data Hub</a></figcaption>
+
+					</figure>
+
+				</div>
+
+				<div class="portfolio-card">
+
+					<figure>
+
+						<a class="portfolio-img" href="sdl-internship.html"><img src="images/sdl-internship/journey-map-workshop.jpg" alt="COA Service Design Lab Internship"></a>
 
 						<figcaption><a class="portfolio-img" href="sdl-internship.html">COA Service Design Lab Internship - Refining and Developing the Customer Experience for Office Visits</a></figcaption>
 
