--- a/resume.html
+++ b/resume.html
@@ -69,6 +69,19 @@
 				<h4>Experience</h4>
 
 				<p>
+					<b>Data and Design Intern</b>, 
+					<em>Texas Water Development Board</em>
+				</p>
+
+				<p>
+					February 2021 - Current
+				</p>
+
+				<p>Worked with technical specialists and other staff to support priority initiatives in TNRIS for the development of a statewide Water Data Hub. Organized and presented design research findings to stakeholders. Established a design criteria and concepts that influenced the front-end development of a product supported by cloud storage and a data management system, Reviewed, documented, and prioritized water datasets. Design low and high fidelity wireframes used to conduct user testing that will guide the development during the pilot stage of the Water Data Hub.</p>
+
+				<br>
+
+				<p>
 					<b>Service Design Intern</b>, 
 					<em>City Of Austin Office of Design & Delivery</em>
 				</p>
@@ -82,7 +95,7 @@
 				<br>
 
 				<p>
-					<b>Server/Web Designer</b>, 
+					<b>Research and Design - Contract</b>, 
 					<em>Pour House Pints & Pies</em>
 				</p>
 
@@ -90,7 +103,7 @@
 					Dec 2018 - Current
 				</p>
 
-				<p>Conducted heuristic analysis on company's current website and worked with a coworker to redesign website and update menu. Collected feedback from coworkers and convinced managers to add POS features that improved Front of House task flows.</p>
+				<p>Conducted heuristic analysis on company's current website and worked with a coworker to redesign site and create a QR accessible menu post-COVID. Collected feedback from coworkers and convinced managers to add POS features that improved Front of House task flows.</p>
 
 				<br>
 
