--- a/sdl-internship.html
+++ b/sdl-internship.html
@@ -40,7 +40,7 @@
 			
 			<nav class="portfolio-second-nav">
 				
-				<a class="disabled">prev</a> / <a href="ecobags.html">next</a>
+				<a href="twdb-internship.html">prev</a> / <a href="ecobags.html">next</a>
 
 			</nav>
 
@@ -163,7 +163,7 @@
 
 			<nav class="portfolio-second-nav">
 				
-				<a class="disabled">prev</a> / <a href="ecobags.html">next</a>
+				<a href="twdb-internship.html">prev</a> / <a href="ecobags.html">next</a>
 
 			</nav>
 
