--- a/resume.html
+++ b/resume.html
@@ -100,7 +100,7 @@
 				</p>
 
 				<p>
-					Dec 2018 - Current
+					Dec 2018 - Oct 2020
 				</p>
 
 				<p>Conducted heuristic analysis on company's current website and worked with a coworker to redesign site and create a QR accessible menu post-COVID. Collected feedback from coworkers and convinced managers to add POS features that improved Front of House task flows.</p>
