--- a/resume.html
+++ b/resume.html
@@ -188,8 +188,10 @@
 								<li>Sketching</li>
 								<li>Personas</li>
 								<li>Storyboarding</li>
+								<li>Journey Mapping</li>
 								<li>User flows</li>
 								<li>Wireframing</li>
+								<li>Rapid Prototyping</li>
 
 							</ul>
 
@@ -209,8 +211,8 @@
 								<li>Contextual inquiry</li>
 								<li>In-depth interviews</li>
 								<li>Heuristic analysis</li>
-								<li>Qualitative analysis</li>
-								<li>Quantitative analysis</li>
+								<li>Affinity Mapping</li>
+								<li>Service blueprints</li>
 
 							</ul>
 
