--- a/twdb-internship.html
+++ b/twdb-internship.html
@@ -51,6 +51,8 @@
 
 			</div>
 
+			<img src="images/twdb-internship/under-construction.jpeg" alt="Under construction">
+
 			<p>This project is still a work in progress. Feel free to ask me questions and to get a sneak peak at what we're working on!
 
 			<br>
