--- a/portfolio.html
+++ b/portfolio.html
@@ -44,8 +44,7 @@
 
 					<figure>
 
-						<a class="portfolio-img" href="tdwb-internship.html">
-						<img src="images/twdb-internship/affinity-mapping.png" alt="Creating a Statewide Texas Water Data Hub"></a>
+						<a class="portfolio-img" href="twdb-internship.html"><img src="images/twdb-internship/affinity-mapping.png" alt="Creating a Statewide Texas Water Data Hub"></a>
 
 						<figcaption><a class="portfolio-img" href="twdb-internship.html">Creating a Statewide Texas Water Data Hub</a></figcaption>
 
