--- a/resume.html
+++ b/resume.html
@@ -116,7 +116,7 @@
 					Jan 2018 - Dec 2018
 				</p>
 
-				<p>Designed recap pdfs for my team's monthly meetings. Participated in usability testing with our UAT team which improved the experience of our internal customer management tool. Updated multiple internal processes which helped improve the quality of our customer calls.</p>
+				<p>Worked with our Process Team to identify gaps and room for improvement in our internal process and implemented suggestions that improved the quality of our customer experience. Participated in usability testing with our UAT Team which improved the experience of our internal customer management tool.</p>
 
 				<br>
 
