--- a/index.html
+++ b/index.html
@@ -23,15 +23,6 @@
 
 				<a class="nav-logo" href="index.html">Rachel Longoria</a>
 
-				<ul>
-
-					<li><a class="current-link" href="index.html">Home</a></li>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="resume.html">Resume</a></li>
-					<li><a href="contact.html">Contact</a></li>
-
-				</ul>
-
 			</nav>
 
 		</header>
@@ -40,23 +31,9 @@
 
 			<div class="hero">
 
-				<h1> A curious UX designer fueled by coffee and collaboration.</h1>
+				<h1> Even portfolio sites need a touch of UX sometimes.</h1>
 
-				<img src="images/sdl-internship/journey-map-workshop.jpg" alt="Rachel Longoria">
-
-			</div>
-
-			<div class="about-info">
-
-				<h2>Hi, I'm Rachel!</h2>
-
-				<p>I'm a dreamer, creator, & designer. After working in the service industry for 10 years, I decided to pack up my skills of empathy and understanding and explore the world of design.</p>
-
-				<p>I'm passionate about environmentalism, learning, and empowering people to be the best version of themselves. I love walking down the street and seeing the influence of design in small, everyday interactions. I daydream about working on projects that make those interactions as user-centric and emotionally-driven as possible. I truly believe the best way to take big, world changing steps is to start with small, impactful ideas.</p>
-
-				<p>I have an unusually strong love for coffee, music, and plants. In my spare time, you can find me playing the ukulele, hunting for a good local food spot to try (suggestions welcome), and playing video games.</p>
-
-				<img class="logo" src="images/logo.png" alt="Rachel Longoria">
+				<h2> Check out my new portfolio site <a href="https://spacelongoria.webflow.io/>HERE.</a></h2>
 
 			</div>
 
@@ -64,14 +41,6 @@
 		</main>
 
 		<footer>
-
-			<nav>
-				<ul>
-					<li><a href="portfolio.html">Portfolio</a></li>
-					<li><a href="resume.html">Resume</a></li>
-					<li><a href="https://linkedin.com/in/rachel-longoria/">LinkedIn</a></li>
-				</ul>
-			</nav>
 
 			<p>Copyright &copy; 2019 Rachel Longoria. All rights reserved.</p>
 
