--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 			<nav class="nav">
 
-				<a class="nav-logo" href="index.html">Rachel Longoria</a>
+				<a class="nav-logo" href="index.html">Space Longoria</a>
 
 			</nav>
 
