--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
 		<main class="about-page">
 
-			<div class="hero">
+			<div>
 
 				<h1> Even portfolio sites need a touch of UX sometimes.</h1>
 
-				<h2> Check out my new portfolio site <a href="https://spacelongoria.webflow.io/>HERE.</a></h2>
+				<h2> Check out my new portfolio site <a href="https://spacelongoria.webflow.io/">HERE.</a></h2>
 
 			</div>
 
